--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <nav class="main-nav">
                     <ul>
                         <li style="background-color: #00AA5B; margin-left: 10px; font-weight: bold;"><a
-                                href="#">Home</a></li>
+                                href="./index.html">Home</a></li>
                         <li><a href="./about.html">About</a></li>
-                        <li><a href="#">Service</a></li>
+                        <li><a href="./service.html">Service</a></li>
                     </ul>
                     <div class="logo-name">
                         <img class="logo" src="./asset/images/logo.png" alt="">
@@ -49,9 +49,9 @@
                         </div>
                     </div>
                     <ul>
-                        <li><a href="#">Resume</a></li>
-                        <li><a href="#">Project</a></li>
-                        <li style="margin-right: 10px;"><a href="#">Contact</a></li>
+                        <li><a href="./resume.html">Resume</a></li>
+                        <li><a href="./project.html">Project</a></li>
+                        <li style="margin-right: 10px;"><a href="./contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -521,14 +521,14 @@
                     <div class="col-2" style="font-size: 48px; font-weight: 500; line-height: 50px;">From my blog post</div>
                     <div class="col-8"></div>
                     <div class="col-2" style="display: flex; justify-content: end; align-items: center;">
-                        <a href="#">
+                        <a href="https://www.facebook.com/rabbita1112/" target="_blank">
                             See all
                         </a>
                     </div>
                 </div>
                 <div class="col-12" style="margin-top: 48px; display: flex;">
-                    <div class="col-3" style="padding: 0 10px;">
-                        <img src="./asset/images/blog1.jpeg" alt="">
+                    <div class="box col-3" style="padding: 0 10px;">
+                        <div class="card" style="background-image: url(./asset/images/blog1.jpeg); background-size: cover;"></div>
                         <div class="tag col-6">UI/UX Design</div>
                         <div class="time" style="margin-top: 12px; display: flex;">
                             <div class="innerName" style="display: flex; margin-right: 35px;">
@@ -546,8 +546,8 @@
                         </div>
                         <div class="desc" style="margin-top: 12px; font-size: 24px;">Design Unraveled: Behind the Scenes of UI/UX Magic</div>
                     </div>
-                    <div class="col-3" style="padding: 0 10px;">
-                        <img src="./asset/images/blog2.png" alt="">
+                    <div class="box col-3" style="padding: 0 10px;">
+                        <div class="card" style="background-image: url(./asset/images/blog2.png); background-size: cover;"></div>
                         <div class="tag col-6">UI/UX Design</div>
                         <div class="time" style="margin-top: 12px; display: flex;">
                             <div class="innerName" style="display: flex; margin-right: 35px;">
@@ -565,7 +565,7 @@
                         </div>
                         <div class="desc" style="margin-top: 12px; font-size: 24px;">Design Unraveled: Behind the Scenes of UI/UX Magic</div>
                     </div>
-                    <div class="col-3" style="padding: 0 10px;">
+                    <div class="box col-3" style="padding: 0 10px;">
                         <div class="card" style="background-image: url(./asset/images/blog3.jpg); background-size: cover;"></div>
                         <div class="tag col-6">UI/UX Design</div>
                         <div class="time" style="margin-top: 12px; display: flex;">
@@ -584,7 +584,7 @@
                         </div>
                         <div class="desc" style="margin-top: 12px; font-size: 24px;">Design Unraveled: Behind the Scenes of UI/UX Magic</div>
                     </div>
-                    <div class="col-3" style="padding: 0 10px;">
+                    <div class="box col-3" style="padding: 0 10px;">
                         <div class="card" style="background-image: url(./asset/images/blog4.jpg); background-size: cover;"></div>
                         <div class="tag col-6">UI/UX Design</div>
                         <div class="time" style="margin-top: 12px; display: flex;">
@@ -682,11 +682,11 @@
                     </div>
                     <div class="col-2" style="display: flex; flex-direction: column; margin-left: 50px;">
                         <div class="title">Navigation</div>
-                        <a href="#">Home</a>
-                        <a href="#">About Us</a>
-                        <a href="#">Service</a>
-                        <a href="#">Resume</a>
-                        <a href="#">Project</a>
+                        <a href="./index.html">Home</a>
+                        <a href="./about.html">About Us</a>
+                        <a href="./service.html">Service</a>
+                        <a href="./resume.html">Resume</a>
+                        <a href="./project.html">Project</a>
                     </div>
                     <div class="col-3">
                         <div class="title">Contact</div>
