--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Project</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <!-- Bootstrap CSS -->
@@ -33,9 +33,9 @@
         <div class="row">
             <nav class="main-nav">
                 <ul>
-                    <li style="margin-left: 10px;"><a
+                    <li style="margin-left: 10px; font-weight: bold;"><a
                             href="./index.html">Home</a></li>
-                    <li><a href="./about.html" style="background-color: #00AA5B; border-radius: 60px; font-weight: bold;">About</a></li>
+                    <li><a href="./about.html">About</a></li>
                     <li><a href="./service.html">Service</a></li>
                 </ul>
                 <div class="logo-name">
@@ -48,7 +48,7 @@
                 </div>
                 <ul>
                     <li><a href="./resume.html">Resume</a></li>
-                    <li><a href="./project.html">Project</a></li>
+                    <li><a href="./project.html" style="background-color: #00AA5B; border-radius: 60px;">Project</a></li>
                     <li style="margin-right: 10px;"><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
