--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                 <div class="col-6" style="padding-left: 300px;">
                     <form action="" style="display: flex; flex-direction: column; justify-content: center; align-items: center; margin-top: 50px;">
                         <input class="col-12" type="text" placeholder="Your Name" id="yourName">
-                        <input class="col-12" type="text" placeholder="Your Mail" id="yourMail">
+                        <input class="col-12" type="email" placeholder="Your Mail" id="yourMail">
                         <textarea style="height: 50px;" class="col-12" placeholder="Share your thoughts" name="" id="thought" cols="30" rows="1"></textarea>
                         <button>SHARE YOUR FEEDBACK</button>
                         <ul class="example-2" style="margin-top: 50px;">
