--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </ul>
                     <div class="logo-name">
                         <img class="logo" src="./asset/images/logo.png" alt="">
-                        <div class="name">RABBITA update</div>
+                        <div class="name">RABBITA</div>
                         <div class="byName">
                             <div class="madeBy">Made by</div>
                             <div class="madeByName">quangthoanguyen</div>
