--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 </head>
 
 <body>
-
     <!-- Header -->
     <header class="header">
         <div class="container">
@@ -36,7 +35,7 @@
                 <nav class="main-nav" style="position: relative;">
                     <ul>
                         <li style="background-color: #00AA5B; margin-left: 10px; font-weight: bold;"><a
-                                href="./index.html">Home</a></li>
+                                href="./index.html">Homee</a></li>
                         <li><a href="./about.html">About</a></li>
                         <li><a href="./service.html">Service</a></li>
                     </ul>
