--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     <header class="header">
         <div class="container">
             <div class="row">
-                <nav class="main-nav">
+                <nav class="main-nav" style="position: relative;">
                     <ul>
                         <li style="margin-left: 10px;"><a href="./index.html">Home</a></li>
                         <li><a href="./about.html">About</a></li>
@@ -51,10 +51,12 @@
                     <ul>
                         <li><a href="./resume.html">Resume</a></li>
                         <li><a href="./project.html">Project</a></li>
-                        <li style="margin-right: 10px;"><a href="./contact.html"
-                                style="background-color: #00AA5B; border-radius: 60px; font-weight: bold;">Contact</a>
-                        </li>
+                        <li><a style="background-color: #00AA5B; margin-right: 10px; font-weight: bold; border-radius: 60px;" href="./contact.html">Contact</a></li>
                     </ul>
+                    <div class="inner-icon-mobi">
+                        <i class="fa-solid fa-bars" style="color: white; font-size: 26px; position: absolute;
+                        top: 33px; right: 30px;"></i>
+                    </div>
                 </nav>
             </div>
         </div>
