--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <div class="row">
                 <nav class="main-nav" style="position: relative;">
                     <ul>
-                        <li style="background-color: #00AA5B; margin-left: 10px; font-weight: bold;"><a
-                                href="./index.html">Home</a></li>
+                        <li style="background-color: #00AA5B; margin-left: 10px; font-weight: bold;">
+                            <a href="./index.html">Home</a></li>
                         <li><a href="./about.html">About</a></li>
                         <li><a href="./service.html">Service</a></li>
                     </ul>
@@ -50,7 +50,7 @@
                     <ul>
                         <li><a href="./resume.html">Resume</a></li>
                         <li><a href="./project.html">Project</a></li>
-                        <li><a href="./contact.html">Contact</a></li>
+                        <li  style="margin-right: 10px;"><a href="./contact.html">Contact</a></li>
                     </ul>
                     <div class="inner-icon-mobi">
                         <i class="fa-solid fa-bars" style="color: white; font-size: 26px; position: absolute;
