--- a/project.html
+++ b/project.html
@@ -32,10 +32,9 @@
 <header class="header">
     <div class="container">
         <div class="row">
-            <nav class="main-nav">
+            <nav class="main-nav" style="position: relative;">
                 <ul>
-                    <li style="margin-left: 10px;"><a
-                            href="./index.html">Home</a></li>
+                    <li style="margin-left: 10px;"><a href="./index.html">Home</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./service.html">Service</a></li>
                 </ul>
@@ -49,14 +48,18 @@
                 </div>
                 <ul>
                     <li><a href="./resume.html">Resume</a></li>
-                    <li><a href="./project.html" style="background-color: #00AA5B; border-radius: 60px; font-weight: bold;">Project</a></li>
+                    <li><a href="./project.html" style="background-color: #00AA5B; font-weight: bold; border-radius: 60px;">Project</a></li>
                     <li style="margin-right: 10px;"><a href="./contact.html">Contact</a></li>
                 </ul>
+                <div class="inner-icon-mobi">
+                    <i class="fa-solid fa-bars" style="color: white; font-size: 26px; position: absolute;
+                    top: 33px; right: 30px;"></i>
+                </div>
             </nav>
         </div>
     </div>
 </header>
-<!-- End Header --> 
+<!-- End Header -->  
 
 <!-- Project -->
 <div class="project">
