--- a/service.html
+++ b/service.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./asset/CSS/reset.css">
     <link rel="stylesheet" href="./asset/CSS/base.css">
     <link rel="stylesheet" href="./asset/CSS/style.css">
+    <link rel="stylesheet" href="./asset/CSS/service.css">
     <!-- Link Slick -->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="https://kenwheeler.github.io/slick/slick/slick-theme.css" />
@@ -31,12 +32,11 @@
 <header class="header">
     <div class="container">
         <div class="row">
-            <nav class="main-nav">
+            <nav class="main-nav" style="position: relative;">
                 <ul>
-                    <li style="margin-left: 10px; font-weight: bold;"><a
-                            href="./index.html">Home</a></li>
+                    <li style="margin-left: 10px;"><a href="./index.html">Home</a></li>
                     <li><a href="./about.html">About</a></li>
-                    <li><a href="./service.html" style="background-color: #00AA5B; border-radius: 60px;">Service</a></li>
+                    <li><a href="./service.html" style="background-color: #00AA5B; font-weight: bold; border-radius: 60px;">Service</a></li>
                 </ul>
                 <div class="logo-name">
                     <img class="logo" src="./asset/images/logo.png" alt="">
@@ -49,13 +49,120 @@
                 <ul>
                     <li><a href="./resume.html">Resume</a></li>
                     <li><a href="./project.html">Project</a></li>
-                    <li style="margin-right: 10px;"><a href="./contact.html">Contact</a></li>
+                    <li  style="margin-right: 10px;"><a href="./contact.html">Contact</a></li>
                 </ul>
+                <div class="inner-icon-mobi">
+                    <i class="fa-solid fa-bars" style="color: white; font-size: 26px; position: absolute;
+                    top: 33px; right: 30px;"></i>
+                </div>
             </nav>
         </div>
     </div>
 </header>
-<!-- End Header -->    
+<!-- End Header -->
+
+<!-- Service -->
+<div class="service">
+    <div class="container">
+        <div class="check">Service</div>
+    </div>
+</div>
+<!-- End Service -->
+
+<!-- Footer -->
+<div class="footer">
+    <div class="container" style="padding: 15px 71px;">
+        <div class="boxOne row">
+            <div class="col-12" style="display: flex; margin-top: 12px;">
+                <div class="col-10" style="font-size: 64px; font-weight: 500; margin-left: 20px;">Lets Connect there
+                </div>
+                <div class="col-2" style="display: flex; justify-content: end; align-items: center;">
+                    <a href="./contact.html" class="btnA"
+                        style="background-color: var(--color-primary); border-radius: 60px; padding: 10px 20px; font-size: 26px; color: white; transition: 0.5s; margin-right: 20px;">
+                        Hire me <i style="rotate: -45deg;" class="fa-solid fa-arrow-right"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="boxTwo row" style="margin-top: 56px;">
+            <div class="col-12" style="display: flex;">
+                <div class="col-4">
+                    <div class="logo-name">
+                        <img class="logo" src="./asset/images/logo.png" alt="">
+                        <div class="name">RABBITA</div>
+                        <div class="byName">
+                            <div class="madeBy">Made by</div>
+                            <div class="madeByName">quangthoanguyen</div>
+                        </div>
+                    </div>
+                    <div class="desc">There are three
+                        responses to a piece of design - yes, no, and WOW! Wow is the one to aim for.</div>
+                    <div style="margin-top: 30px;" class="social">
+                        <main>
+                            <ul class="example-1">
+                                <li class="icon-content">
+                                    <a class="link" target="_blank" data-social="behance" aria-label="Behance"
+                                        href="https://www.behance.net/nguynquangtha?fbclid=IwAR2STRw7k-9fUiHSa18RdV78WuV1IbAmIqqhNn0DWsHgb7KzvxpCqVAylww&">
+                                        <i style="font-size: 26.7px;" class="fa-brands fa-behance"></i>
+                                    </a>
+                                    <div class="tooltip">Behance</div>
+                                </li>
+                                <li class="icon-content">
+                                    <a class="link" target="_blank" data-social="tiktok" aria-label="Tiktok"
+                                        href="https://www.tiktok.com/@rabbita1112">
+                                        <i style="font-size: 26.7px;" class="fa-brands fa-tiktok"></i>
+                                    </a>
+                                    <div class="tooltip">Tiktok</div>
+                                </li>
+                                <li class="icon-content">
+                                    <a target="_blank" class="link" data-social="facebook" aria-label="Facebook"
+                                        href="https://www.facebook.com/quangthoa.nguyn">
+                                        <i style="font-size: 26.7px;" class="fa-brands fa-facebook-f"></i>
+                                    </a>
+                                    <div class="tooltip">Facebook</div>
+                                </li>
+                            </ul>
+                        </main>
+
+                    </div>
+                </div>
+                <div class="col-2" style="display: flex; flex-direction: column; margin-left: 50px;">
+                    <div class="title">Navigation</div>
+                    <a href="./index.html">Home</a>
+                    <a href="./about.html">About Us</a>
+                    <a href="./service.html">Service</a>
+                    <a href="./resume.html">Resume</a>
+                    <a href="./project.html">Project</a>
+                </div>
+                <div class="col-3">
+                    <div class="title">Contact</div>
+                    <p style="margin-top: 20px; font-size: 16px;">0916595807</p>
+                    <p style="margin-top: 20px; font-size: 16px;">quangthoa11122001@gmail.com</p>
+                    <p style="margin-top: 20px; font-size: 16px;">facebook.com.quangthoanguyn</p>
+                </div>
+                <div class="col-3">
+                    <div class="title">Get the latest information</div>
+                    <form action="" style="margin-top: 20px; display: flex;">
+                        <input type="email" placeholder="Email Address">
+                        <button>
+                            <i class="fa-solid fa-paper-plane"></i>
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-12" style="display: flex;">
+                <div class="col-6" style="padding-left: 15px;">Copyright©2024 Rabbita. All Rights Reserved.</div>
+                <div class="col-6" style="display: flex; justify-content: end; padding-right:15px;">User Terms &
+                    Conditions | Privacy Policy</div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Footer -->
 
 </body>
 </html>
