--- a/index.html
+++ b/index.html
@@ -153,20 +153,30 @@
                     <div class="col-6 innerContent">You can refer to my design services! <br> Select it and see more
                         details about the service of your choice.</div>
                 </div>
-                <div class="row">
-                    <div class="inner-wrap">
-                        <a href="./service.html" class="inner-box">
-                            <div class="title">UI/UX Design</div>
-                            <img src="./asset/images/service1.jpg" alt="">
-                        </a>
-                        <a href="./service.html" class="inner-box">
-                            <div class="title">Web Design</div>
-                            <img src="./asset/images/service2.jpg" alt="">
-                        </a>
-                        <a href="./service.html" class="inner-box">
-                            <div class="title">Landing Page</div>
-                            <img src="./asset/images/service3.jpg" alt="">
-                        </a>
+            </div>
+            <div class="inner-wrap">
+                <div class="inner-box">
+                    <img src="./asset/images/service1.jpg" alt="">
+                    <div class="inner-content">
+                        <h3 class="inner-title">
+                            2D/3D Design
+                        </h3>
+                    </div>
+                </div>
+                <div class="inner-box">
+                    <img src="./asset/images/service2.jpg" alt="">
+                    <div class="inner-content">
+                        <h3 class="inner-title">
+                            Web/Mobile Design
+                        </h3>
+                    </div>
+                </div>
+                <div class="inner-box">
+                    <img src="./asset/images/service3.jpg" alt="">
+                    <div class="inner-content">
+                        <div class="inner-title">
+                            Landing Page Design
+                        </div>
                     </div>
                 </div>
             </div>
