--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <ul>
                         <li><a href="./resume.html">Resume</a></li>
                         <li><a href="./project.html">Project</a></li>
-                        <li  style="margin-right: 10px;"><a href="./contact.html">Contact</a></li>
+                        <li style="margin-right: 10px;"><a href="./contact.html">Contact</a></li>
                     </ul>
                     <div class="inner-icon-mobi">
                         <i class="fa-solid fa-bars" style="color: white; font-size: 26px; position: absolute;
@@ -72,7 +72,7 @@
                         <img id="img-01" src="./asset/images/Vector 1.png" alt="">
                     </div>
                     <div class="textLineOne">
-                        <div class="iAm">I'm <span style="color: #00AA5B;">Rabbita</span>,</div>
+                        <div class="iAm">I'm <span style="color: var(--color-primary);">Rabbita</span>,</div>
                     </div>
                     <div class="textLineTwo" style="position: relative;">
                         <img src="./asset/images/Vector 2.png" alt="">
@@ -189,16 +189,7 @@
         <div class="container">
             <div class="col-12">
                 <div class="title">
-                    My <span style="color: transparent;">Work Exprience</span><span
-                        style="color: var(--color-primary);">
-                        <div class="loader">
-                            <div class="loader">
-                                <span style="letter-spacing: 0;">Work Exprience</span>
-                                <span style="letter-spacing: 0;">Work Exprience</span>
-                            </div>
-                        </div>
-
-                    </span>
+                    My <span style="color: var(--color-primary)">Work Exprience</span>
                 </div>
             </div>
             <div class="innerEx" style="display: flex;">
@@ -219,22 +210,16 @@
                 <div class="col-2" style="display: flex; flex-direction: column; align-items: center;">
                     <div class="circle"
                         style="display: flex; justify-content: center; align-items: center; margin-top: 10px; position: relative;">
-                        <div class="circleOne"></div>
-                        <div class="dashCircle" style="border: 3px var(--color-body); position: absolute;"></div>
                         <div class="se-loader"></div>
                     </div>
                     <div class="line lineOne"></div>
                     <div class="circle"
                         style="margin-top: 7px; display: flex; justify-content: center; align-items: center; position: relative;">
-                        <div class="circleOne"></div>
-                        <div class="dashCircle" style="border: 3px var(--color-body); position: absolute;"></div>
                         <div class="se-loader" style="color: var(--color-body);"></div>
                     </div>
                     <div class="line lineTwo"></div>
                     <div class="circle"
                         style="display: flex; justify-content: center; margin-top: 7px; align-items: center; position: relative;">
-                        <div class="circleOne"></div>
-                        <div class="dashCircle" style="border: 3px var(--color-body); position: absolute;"></div>
                         <div class="se-loader"></div>
                     </div>
                 </div>
@@ -266,16 +251,15 @@
             <div class="col-6" style="display: flex; align-items: center; justify-content: end;">
                 <div class="content">
                     <div class="innerContent">Why <span style="color: var(--color-primary);">Hire me</span>?</div>
-                    <div class="innerDesc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam officia nemo
-                        cum dolorem veniam quo animi culpa suscipit quidem!</div>
+                    <div class="innerDesc">With the desire to acquire knowledge, experience and experiences. I always complete the projects I undertake in the most meticulous way, customers can only say OMG!</div>
                     <div class="innerInfo">
                         <div class="info infoOne">
-                            <div class="number">450+</div>
+                            <div class="number">250+</div>
                             <div class="text">Project Completed</div>
                         </div>
                         <div class="info infoTwo">
-                            <div class="number">450+</div>
-                            <div class="text">Project Completed</div>
+                            <div class="number">100+</div>
+                            <div class="text">Event Completed</div>
                         </div>
                     </div>
                     <a href="./contact.html" class="btnHire">Hire me</a>
@@ -308,7 +292,7 @@
             </div>
             <div class="col-12" style="display: flex;">
                 <div class="col-6" style="padding-top: 48px;">
-                    <a href="./project.html" class="card" style="margin-left: 71px;">
+                    <a href="./project.html" class="card" style="margin-left: 71px; background-image: url(./asset/images/project/Asset\ 3@4x.png);">
                         <div class="innerTitle">
                             <div class="text textOne">
                                 At School
@@ -323,7 +307,7 @@
                 </div>
                 <div class="col-6" style="display: flex; justify-content: end; padding-top: 48px;">
                     <a href="./project.html" class="card"
-                        style="margin-right: 71px; background-image: url(./asset/images/cadie\'s\ beauty\ shop.png);">
+                        style="margin-right: 71px; background-image: url(./asset/images/project/Asset\ 5@4x.png);">
                         <div class="innerTitle">
                             <div class="text textTwo">
                                 My Works
@@ -356,12 +340,10 @@
             </div>
             <div class="col-12" style="display: flex; align-items: center; flex-direction: column;">
                 <div class="title">
-                    <div class="innerTitle">Lirante - Food Dilvery Solution</div>
-                    <a href="#" class="btnFill"><i class="fa-solid fa-arrow-right"></i></a>
+                    <div class="innerTitle">More - Visit my projects</div>
+                    <a href="./project.html" class="btnFill"><i class="fa-solid fa-arrow-right"></i></a>
                 </div>
-                <div class="innerDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed congue interdum
-                    ligula a dignissim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lobortis orci
-                    elementum egestas lobortis.</div>
+                <div class="innerDesc">Where I store all my products so far, you can check them out and send me your design ideas!</div>
             </div>
         </div>
     </div>
