--- a/project.html
+++ b/project.html
@@ -68,7 +68,7 @@
         <div class="row">
             <div class="col-12" style="display: flex; align-items: center;">
                 <div class="col-10">
-                    <div class="heading">At School</div>
+                    <div class="heading">At <span style="color: var(--color-primary);">School</span></div>
                 </div>
                 <div class="col-2" style="display: flex; justify-content: end;">
                     <a href="#" class="btnFill" style="text-align: center; margin-right: 71px;">
@@ -93,7 +93,7 @@
         <div class="row" style="margin-top: 50px;">
             <div class="col-12" style="display: flex; align-items: center;">
                 <div class="col-10">
-                    <div class="heading">My Works</div>
+                    <div class="heading">My <span style="color: var(--color-primary);"></span></div>
                 </div>
                 <div class="col-2" style="display: flex; justify-content: end;">
                     <a href="#" class="btnFill" style="text-align: center; margin-right: 71px;">
