update res home

--- a/index.html
+++ b/index.html
@@ -278,47 +278,50 @@
     <!-- Portfolio -->
     <div class="portfolio">
         <div class="container">
-            <div class="col-12" style="display: flex; align-items: center;">
-                <div class="col-10">
-                    <div class="text" style="margin-left: 71px;">
-                        Lets have a look at my <br> <span style="color: var(--color-primary);">Portfolio</span>
+            <div class="row">
+                <div class="col-12" style="display: flex; align-items: center; flex-direction: row;">
+                    <div class="col-6">
+                        <div class="text" style="margin-left: 71px;">
+                            Lets have a look at my <br> <span style="color: var(--color-primary);">Portfolio</span>
+                        </div>
+                    </div>
+                    <div class="col-6" style="display: flex; justify-content: end;">
+                        <a href="./project.html" class="btnFill" style="text-align: center; margin-right: 71px;">
+                            See All
+                        </a>
                     </div>
                 </div>
-                <div class="col-2" style="display: flex; justify-content: end;">
-                    <a href="./project.html" class="btnFill" style="text-align: center; margin-right: 71px;">
-                        See All
-                    </a>
-                </div>
             </div>
-            <div class="col-12" style="display: flex;">
-                <div class="col-6" style="padding-top: 48px;">
-                    <a href="./project.html" class="card" style="margin-left: 71px; background-image: url(./asset/images/project/Asset\ 3@4x.png);">
-                        <div class="innerTitle">
-                            <div class="text textOne">
-                                At School
+            <div class="row">
+                <div class="col-12" style="display: flex;">
+                    <div class="col-6" style="padding-top: 48px;">
+                        <a href="./project.html" class="card" style=" background-image: url(./asset/images/project/Asset\ 3@4x.png);">
+                            <div class="innerTitle">
+                                <div class="text textOne">
+                                    At School
+                                </div>
+                                <div class="desc">
+                                    Exercises and projects are carried out at school. Under the guidance of lecturers at FPT
+                                    University - Hanoi.
+                                </div>
                             </div>
-                            <div class="desc">
-                                Exercises and projects are carried out at school. Under the guidance of lecturers at FPT
-                                University - Hanoi.
+                            <div class="btnOutline btnOne"><i class="fa-solid fa-arrow-right"></i></div>
+                        </a>
+                    </div>
+                    <div class="col-6" style="padding-top: 48px;">
+                        <a href="./project.html" class="card" style=" background-image: url(./asset/images/project/Asset\ 5@4x.png);">
+                            <div class="innerTitle">
+                                <div class="text textTwo">
+                                    My Works
+                                </div>
+                                <div class="desc">
+                                    Projects carried out outside to perfect and enhance one's own capabilities: company
+                                    projects, personal projects, freelance projects,...
+                                </div>
                             </div>
-                        </div>
-                        <div class="btnOutline btnOne"><i class="fa-solid fa-arrow-right"></i></div>
-                    </a>
-                </div>
-                <div class="col-6" style="display: flex; justify-content: end; padding-top: 48px;">
-                    <a href="./project.html" class="card"
-                        style="margin-right: 71px; background-image: url(./asset/images/project/Asset\ 5@4x.png);">
-                        <div class="innerTitle">
-                            <div class="text textTwo">
-                                My Works
-                            </div>
-                            <div class="desc">
-                                Projects carried out outside to perfect and enhance one's own capabilities: company
-                                projects, personal projects, freelance projects,...
-                            </div>
-                        </div>
-                        <div class="btnOutline btnTwo"><i class="fa-solid fa-arrow-right"></i></div>
-                    </a>
+                            <div class="btnOutline btnTwo"><i class="fa-solid fa-arrow-right"></i></div>
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="col-12" style="display: flex; justify-content: center;">
